--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 _build
+/_build/doctrees/environment.pickle
+/_build/doctrees/index.doctree
+/_build/html/_sources/index.txt
+/_build/html/index.html
+/_build/html/searchindex.js
